image_buffer: Train on GPU

--- a/train_image_buffer.ipynb
+++ b/train_image_buffer.ipynb
@@ -578,7 +578,7 @@
    },
    "outputs": [],
    "source": [
-    "device = \"cpu\" # torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "generator = Generator().to(device)\n",
     "discriminator = Discriminator().to(device)\n",
     "\n",
