better output dir

--- a/train_vanilla.ipynb
+++ b/train_vanilla.ipynb
@@ -129,7 +129,7 @@
    "source": [
     "# Here you want to point the script to the correct dataset folder. \n",
     "INPUT_DIR = directory_should_exist(\"datasets/yes-to-the-dress\")\n",
-    "OUTPUT_DIR = ensure_directory(\"output_vanilla_1\")\n",
+    "OUTPUT_DIR = ensure_directory(\"output/vanilla_01\")\n",
     "SAMPLE_INTERVAL = 300\n",
     "SNAPSHOT_INTERVAL = 5\n",
     "EPOCHS = 30\n",
