Use torchvision.io.read_image for faster image loading.

--- a/train_vanilla.ipynb
+++ b/train_vanilla.ipynb
@@ -56,7 +56,8 @@
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "from types import SimpleNamespace\n",
-    "from IPython.display import display, clear_output"
+    "from IPython.display import display, clear_output\n",
+    "from torchvision.io import read_image"
    ]
   },
   {
@@ -185,23 +186,17 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        img_name = os.path.join(self.root_dir, self.image_files[idx])\n",
-    "        image = Image.open(img_name)\n",
-    "\n",
-    "        # Convert to RGB if necessary\n",
-    "        if image.mode != \"RGB\":\n",
-    "            image = image.convert(mode=\"RGB\")\n",
+    "        image = read_image(img_name).float() / 255.0  # Normalize to [0, 1]\n",
     "\n",
     "        # Split the image into input and target\n",
-    "        w, h = image.size\n",
-    "        target_image = image.crop((0, 0, w // 2, h))\n",
-    "        input_image = image.crop((w // 2, 0, w, h))\n",
+    "        _, h, w = image.shape\n",
+    "        w_mid = w // 2\n",
+    "        target_image = image[:, :, :w_mid]\n",
+    "        input_image = image[:, :, w_mid:]\n",
     "\n",
-    "        # Apply random jitter\n",
-    "        #input_image, target_image = self.random_jitter(input_image, target_image)\n",
-    "\n",
-    "        if self.transform:\n",
-    "            input_image = self.transform(input_image)\n",
-    "            target_image = self.transform(target_image)\n",
+    "        # Normalize images to [-1, 1]\n",
+    "        input_image = (input_image * 2) - 1\n",
+    "        target_image = (target_image * 2) - 1\n",
     "\n",
     "        return input_image, target_image\n"
    ]
@@ -587,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
