Avoid redundant normalization

--- a/train_vanilla.ipynb
+++ b/train_vanilla.ipynb
@@ -147,9 +147,8 @@
    "source": [
     "# Create the dataset class\n",
     "class Pix2PixDataset(Dataset):\n",
-    "    def __init__(self, root_dir, transform=None, jitter_size=60):\n",
+    "    def __init__(self, root_dir, jitter_size=60):\n",
     "        self.root_dir = root_dir\n",
-    "        self.transform = transform\n",
     "        self.jitter_size = jitter_size\n",
     "        self.image_files = [\n",
     "            f for f in os.listdir(root_dir) if f.endswith(\".jpg\") or f.endswith(\".png\")\n",
@@ -186,18 +185,21 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        img_name = os.path.join(self.root_dir, self.image_files[idx])\n",
-    "        image = read_image(img_name).float() / 255.0  # Normalize to [0, 1]\n",
-    "\n",
+    "        image = read_image(img_name).float()\n",
+    "    \n",
     "        # Split the image into input and target\n",
     "        _, h, w = image.shape\n",
     "        w_mid = w // 2\n",
     "        target_image = image[:, :, :w_mid]\n",
     "        input_image = image[:, :, w_mid:]\n",
-    "\n",
+    "    \n",
     "        # Normalize images to [-1, 1]\n",
-    "        input_image = (input_image * 2) - 1\n",
-    "        target_image = (target_image * 2) - 1\n",
+    "        input_image = (input_image / 127.5) - 1\n",
+    "        target_image = (target_image / 127.5) - 1\n",
     "\n",
+    "        # Apply random jitter\n",
+    "        # input_image, target_image = self.random_jitter(input_image, target_image)\n",
+    "    \n",
     "        return input_image, target_image\n"
    ]
   },
@@ -209,12 +211,7 @@
    },
    "outputs": [],
    "source": [
-    "transform = transforms.Compose([\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
-    "])\n",
-    "\n",
-    "dataset = Pix2PixDataset(INPUT_DIR, transform=transform)\n",
+    "dataset = Pix2PixDataset(INPUT_DIR)\n",
     "dataloader = DataLoader(\n",
     "    dataset, batch_size=BATCH_SIZE, shuffle=True,\n",
     "    num_workers=multiprocessing.cpu_count() - 1, worker_init_fn=worker_init_fn\n",
