--- a/train_vanilla.ipynb
+++ b/train_vanilla.ipynb
@@ -46,6 +46,7 @@
     "import torch.onnx\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torchvision import transforms\n",
+    "from torchvision.io import read_image\n",
     "from torchvision.utils import save_image\n",
     "import torchvision.transforms.functional as TF\n",
     "from PIL import Image\n",
@@ -56,8 +57,7 @@
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "from types import SimpleNamespace\n",
-    "from IPython.display import display, clear_output\n",
-    "from torchvision.io import read_image"
+    "from IPython.display import display, clear_output"
    ]
   },
   {
