--- a/train_multiscale_discriminator.ipynb
+++ b/train_multiscale_discriminator.ipynb
@@ -49,6 +49,7 @@
     "import torch.onnx\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torchvision import transforms\n",
+    "from torchvision.io import read_image\n",
     "from torchvision.utils import save_image\n",
     "import torchvision.transforms.functional as TF\n",
     "from PIL import Image\n",
@@ -154,9 +155,8 @@
    "source": [
     "# Create the dataset class\n",
     "class Pix2PixDataset(Dataset):\n",
-    "    def __init__(self, root_dir, transform=None, jitter_size=60):\n",
+    "    def __init__(self, root_dir, jitter_size=60):\n",
     "        self.root_dir = root_dir\n",
-    "        self.transform = transform\n",
     "        self.jitter_size = jitter_size\n",
     "        self.image_files = [\n",
     "            f for f in os.listdir(root_dir) if f.endswith(\".jpg\") or f.endswith(\".png\")\n",
@@ -193,24 +193,21 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        img_name = os.path.join(self.root_dir, self.image_files[idx])\n",
-    "        image = Image.open(img_name)\n",
-    "\n",
-    "        # Convert to RGB if necessary\n",
-    "        if image.mode != \"RGB\":\n",
-    "            image = image.convert(mode=\"RGB\")\n",
-    "\n",
+    "        image = read_image(img_name).float()\n",
+    "    \n",
     "        # Split the image into input and target\n",
-    "        w, h = image.size\n",
-    "        target_image = image.crop((0, 0, w // 2, h))\n",
-    "        input_image = image.crop((w // 2, 0, w, h))\n",
+    "        _, h, w = image.shape\n",
+    "        w_mid = w // 2\n",
+    "        target_image = image[:, :, :w_mid]\n",
+    "        input_image = image[:, :, w_mid:]\n",
+    "    \n",
+    "        # Normalize images to [-1, 1]\n",
+    "        input_image = (input_image / 127.5) - 1\n",
+    "        target_image = (target_image / 127.5) - 1\n",
     "\n",
     "        # Apply random jitter\n",
-    "        #input_image, target_image = self.random_jitter(input_image, target_image)\n",
-    "\n",
-    "        if self.transform:\n",
-    "            input_image = self.transform(input_image)\n",
-    "            target_image = self.transform(target_image)\n",
-    "\n",
+    "        # input_image, target_image = self.random_jitter(input_image, target_image)\n",
+    "    \n",
     "        return input_image, target_image\n"
    ]
   },
@@ -222,12 +219,7 @@
    },
    "outputs": [],
    "source": [
-    "transform = transforms.Compose([\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
-    "])\n",
-    "\n",
-    "dataset = Pix2PixDataset(INPUT_DIR, transform=transform)\n",
+    "dataset = Pix2PixDataset(INPUT_DIR)\n",
     "dataloader = DataLoader(\n",
     "    dataset, batch_size=BATCH_SIZE, shuffle=True,\n",
     "    num_workers=multiprocessing.cpu_count() - 1, worker_init_fn=worker_init_fn\n",
@@ -541,10 +533,10 @@
     "                g_loss_gan += criterion_gan(fake_out, torch.ones_like(fake_out))\n",
     "            \n",
     "            # Feature matching loss\n",
-    "            g_loss_fm = feature_matching(real_outputs, fake_outputs) * 20\n",
+    "            g_loss_fm = feature_matching(real_outputs, fake_outputs) * 5\n",
     "            \n",
     "            # L1 loss\n",
-    "            g_loss_l1 = criterion_pixel(fake_img, target_img) * 10\n",
+    "            g_loss_l1 = criterion_pixel(fake_img, target_img) * 100\n",
     "            \n",
     "            # Combined generator loss\n",
     "            g_loss = g_loss_gan + g_loss_fm + g_loss_l1\n",
