multiscale: oops still some errors

--- a/train_multiscale_discriminator.ipynb
+++ b/train_multiscale_discriminator.ipynb
@@ -193,22 +193,19 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        img_name = os.path.join(self.root_dir, self.image_files[idx])\n",
-    "        image = read_image(img_name).float()\n",
-    "    \n",
+    "        image = read_image(img_name).float() / 255.0  # Normalize to [0, 1]\n",
+    "\n",
     "        # Split the image into input and target\n",
     "        _, h, w = image.shape\n",
     "        w_mid = w // 2\n",
     "        target_image = image[:, :, :w_mid]\n",
     "        input_image = image[:, :, w_mid:]\n",
-    "    \n",
-    "        # Normalize images to [-1, 1]\n",
-    "        input_image = (input_image / 127.5) - 1\n",
-    "        target_image = (target_image / 127.5) - 1\n",
     "\n",
-    "        # Apply random jitter\n",
-    "        # input_image, target_image = self.random_jitter(input_image, target_image)\n",
-    "    \n",
-    "        return input_image, target_image\n"
+    "        # Normalize images to [-1, 1]\n",
+    "        input_image = (input_image * 2) - 1\n",
+    "        target_image = (target_image * 2) - 1\n",
+    "\n",
+    "        return input_image, target_image"
    ]
   },
   {
@@ -533,10 +530,10 @@
     "                g_loss_gan += criterion_gan(fake_out, torch.ones_like(fake_out))\n",
     "            \n",
     "            # Feature matching loss\n",
-    "            g_loss_fm = feature_matching(real_outputs, fake_outputs) * 5\n",
+    "            g_loss_fm = feature_matching(real_outputs, fake_outputs) * 20\n",
     "            \n",
     "            # L1 loss\n",
-    "            g_loss_l1 = criterion_pixel(fake_img, target_img) * 100\n",
+    "            g_loss_l1 = criterion_pixel(fake_img, target_img) * 10\n",
     "            \n",
     "            # Combined generator loss\n",
     "            g_loss = g_loss_gan + g_loss_fm + g_loss_l1\n",
